commit for add signUp funtionality for room owner

--- a/frontend/user-gateway-UI/src/app/_common/nav/nav.component.html
+++ b/frontend/user-gateway-UI/src/app/_common/nav/nav.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" aria-label="Offcanvas navbar middle">
+    <nav class="navbar navbar-expand-lg navbar-dark  fixed-top" aria-label="Offcanvas navbar middle">
         <div class="container">
             <a class="navbar-brand" href="#">
                 <img src="./assets/images/logos/main-logo.png" class="rounded-circle" alt="">
