--- a/frontend/user-gateway-UI/src/styles.css
+++ b/frontend/user-gateway-UI/src/styles.css
@@ -15,10 +15,12 @@ body {
 
 :root {
   --primary-color: #1D3461; /* Dark Blue */
-  --secondary-color: #FFA500; /* Soft Orange */
+  --secondary-color: #C14953; /* Soft Orange */
   --background-color: rgba(255, 255, 255, 0.847);  /* Light Gray */
   --text-color: #333; /* Darker Gray for readability */
 }
+
+
 
 
 
