commit for complete Storage Space Overview

--- a/frontend/user-gateway-UI/src/app/_menus/login-signup/signup/action/room-owner-signup/room-owner-signup.component.html
+++ b/frontend/user-gateway-UI/src/app/_menus/login-signup/signup/action/room-owner-signup/room-owner-signup.component.html
@@ -3,11 +3,7 @@
     <nav class="navbar navbar-expand nav-color fixed-top">
       <div class="container">
         <a class="navbar-brand" href="#">
-          <img
-            src="./assets/images/logos/main-logo.png"
-            class="rounded-circle"
-            alt=""
-          />
+          <img src="./assets/images/logos/main-logo.png" class="rounded-circle" alt="" />
         </a>
         <ul class="navbar-nav me-auto">
           <li class="nav-item">
@@ -16,13 +12,7 @@
         </ul>
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a
-              class="nav-link active"
-              href="#"
-              data-bs-toggle="modal"
-              data-bs-target="#loginModal"
-              >Login</a
-            >
+            <a class="nav-link active" href="#" data-bs-toggle="modal" data-bs-target="#loginModal">Login</a>
           </li>
         </ul>
       </div>
