--- a/frontend/user-gateway-UI/src/app/_menus/login-signup/signup/action/stepperform/step-two/step-two.component.css
+++ b/frontend/user-gateway-UI/src/app/_menus/login-signup/signup/action/stepperform/step-two/step-two.component.css
@@ -23,7 +23,9 @@
   }
   
   /* Input field styling */
-  .Storage-Space-Overview input{
+  .Storage-Space-Overview input,
+  .Storage-Space-Overview select,
+  .Storage-Space-Overview .multiSelectDropdowns {
     font-size: 16px;  
     font-weight: 400; 
     padding: 10px;
@@ -33,6 +35,7 @@
   
   /* Placeholder size */
   .Storage-Space-Overview input::placeholder,
+  .Storage-Space-Overview .multiSelectDropdowns,
   .Storage-Space-Overview select.form-select {
     font-size: 14px; 
   }
@@ -64,23 +67,6 @@
   }
 
 
-  /* step-two.component.css */
-.selectize-input {
-  font-size: 16px;
-  font-weight: 400;
-  padding: 10px;
-  border-radius: 4px;
-  border: 1px solid #ccc;
-  background-color: #fff;
-  color: #333;
-}
-
-.selectize-dropdown {
-  font-size: 16px;
-  border: 1px solid #ccc;
-  background-color: #fff;
-  color: #333;
-}
 
   
   
