--- a/frontend/user-gateway-UI/src/app/_menus/login-signup/signup/action/stepperform/step-two/step-two.component.html
+++ b/frontend/user-gateway-UI/src/app/_menus/login-signup/signup/action/stepperform/step-two/step-two.component.html
@@ -35,154 +35,165 @@
     </div>
     <div class="card-body p-3 bg-light">
       <form [formGroup]="stepTwoForm" (ngSubmit)="stepTwoSubmit()" autocomplete="off" novalidate #formRef="ngForm" class="Storage-Space-Overview">
-        <!-- Storage Type && No. of Rooms -->
+
         <div class="row">
-          <div class="col-md-6 mb-2">
+          <div class="col-md-6 mb-1">
             <label for="propertyName" class="form-label ps-1">Property Name<span class="asterisk">*</span></label>
-            <input type="text" class="form-control" id="propertyName" formControlName="propertyName" placeholder="Enter Property Name" />
-            <span class="error" *ngIf="stepTwoForm.controls['propertyName'].hasError('required') && formRef.submitted">Please enter property name</span>
+            <input type="text" class="form-control" id="propertyName" formControlName="propertyName" placeholder="Enter property name" />
+            <span class="error" *ngIf="stepTwoForm.controls['propertyName'].hasError('required') && formRef.submitted">Please enter the property name</span>
             <span class="error" *ngIf="stepTwoForm.controls['propertyName'].hasError('maxlength') && formRef.submitted">
-              Property Name cannot exceed 40 characters
+              Property name cannot exceed 40 characters
             </span>
           </div>
-          <div class="col-md-6 mb-2">
-            <div class="control-group ">
-              <label for="propertyType" class="form-label ps-1">Property Type<span class="asterisk">*</span></label>
-              <select id="propertyType" formControlName="propertyType" class="form-control" placeholder="Select property type"></select>
-            </div>
-            <span class="error" *ngIf="stepTwoForm.controls['propertyType'].hasError('required') && formRef.submitted">Please select property type</span>
+          <div class="col-md-6 mb-1">
+            <label for="propertyType" class="form-label ps-1">Property Type<span class="asterisk">*</span></label>
+            <select class="form-select" formControlName="propertyType">
+              <option value="">Select property type</option>
+              <option *ngFor="let propertyType of ['Room', 'Locker', 'Warehouse']" [value]="propertyType">
+                {{ propertyType }}
+              </option>
+            </select>
+            <span class="error" *ngIf="stepTwoForm.controls['propertyType'].hasError('required') && formRef.submitted">
+              Please select the property type
+            </span>
           </div>
         </div>
 
         <div class="row">
-          <div class="col-md-6 mb-2">
+          <div class="col-md-6 mb-1">
             <label for="noOfRooms" class="form-label ps-1">Number of Rooms Available<span class="asterisk">*</span></label>
-            <input type="number" class="form-control" id="noOfRooms" formControlName="noOfRooms" placeholder="Enter no. of rooms" min="1" />
+            <input type="number" class="form-control" id="noOfRooms" formControlName="noOfRooms" placeholder="Enter the number of rooms" min="1" />
             <span class="error" *ngIf="(stepTwoForm.controls['noOfRooms'].hasError('required')
                                         || stepTwoForm.controls['noOfRooms'].hasError('min')
                                         || stepTwoForm.controls['noOfRooms'].hasError('max')) && formRef.submitted">
-              Please specify the number of rooms (between 1 and 99)
+              Please specify the number of rooms (between 1 and 99).
             </span>
           </div>
 
-          <div class="col-md-6 mb-2">
-            <div class="control-group">
-              <label for="roomSize" class="form-label ps-1">Room Size<span class="asterisk">*</span></label>
-              <select id="roomSize" formControlName="roomSize" class="form-control" placeholder="Select room size"></select>
-              <span class="error" *ngIf="stepTwoForm.controls['roomSize'].hasError('required') && formRef.submitted">Please select room size</span>
+          <div class="col-md-6 mb-1">
+            <label for="roomSize" class="form-label ps-1">Room Size<span class="asterisk">*</span></label>
+            <div class="dropdown">
+              <button class="btn text-start multiSelectDropdowns w-100" type="button" style="background-color: white;" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="true">
+                {{ selectedRoomSizes.length > 0 ? 'Selected (' + selectedRoomSizes.length + ')' : 'Select Room Size' }}
+                <span class="float-end"><i class="fa-solid fa-angle-down"></i></span>
+              </button>
+              <ul class="dropdown-menu w-100 p-3" id="dropdownOptions">
+                <li *ngFor="let option of roomSizeOptions">
+                  <div class="form-check">
+                    <input class="form-check-input" type="checkbox" [value]="option.value" [id]="'roomSize_' + option.id" [checked]="selectedRoomSizes.includes(option.value)" (change)="onRoomSizeChange($event, option)">
+                    <label class="form-check-label ps-2" [for]="'roomSize_' + option.id">{{ option.label }}</label>
+                  </div>
+                </li>
+              </ul>
             </div>
+            <span class="error" *ngIf="stepTwoForm.controls['roomSize'].hasError('required') && formRef.submitted">Please select a room size.</span>
           </div>
         </div>
 
         <div class="row">
-          <div class="col-md-6 mb-2">
-            <div class="control-group">
-              <label for="securityMeasures" class="form-label ps-1">Security Measures<span class="asterisk">*</span></label>
-              <select id="securityMeasures" formControlName="securityMeasures" class="form-control" placeholder="Select security measures"></select>
-              <span class="error" *ngIf="stepTwoForm.controls['securityMeasures'].hasError('required') && formRef.submitted">Please select security measures</span>
+          <div class="col-md-6 mb-1">
+            <label for="securityMeasures" class="form-label ps-1">Security Measures<span class="asterisk">*</span></label>
+            <div class="dropdown">
+              <button class="btn text-start multiSelectDropdowns w-100" type="button" style="background-color: white;" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="true">
+                {{ selectedSecurityMeasures.length > 0
+                ? 'Selected (' + selectedSecurityMeasures.length + ')'
+                : 'Select Security Measures' }}
+                <span class="float-end"><i class="fa-solid fa-angle-down"></i></span>
+              </button>
+              <ul class="dropdown-menu w-100 p-3" id="dropdownOptions">
+                <li *ngFor="let option of securityMeasuresOptions">
+                  <div class="form-check">
+                    <input class="form-check-input" type="checkbox" [value]="option.value" [id]="'securityMeasures_' + option.id" [checked]="selectedSecurityMeasures.includes(option.value)" (change)="onSecurityMeasuresChange($event, option)" />
+                    <label class="form-check-label ps-2" [for]="'securityMeasures_' + option.id">
+                      {{ option.label }}
+                    </label>
+                  </div>
+                </li>
+              </ul>
             </div>
+            <span class="error" *ngIf="stepTwoForm.controls['securityMeasures'].hasError('required') && formRef.submitted">Please select security measures</span>
+          </div>
+          <div class="col-md-6 mb-1">
+            <label for="hourlyRentalPrice" class="form-label ps-1">Hourly Rate<span class="asterisk">*</span></label>
+            <input type="number" class="form-control" id="hourlyRentalPrice" formControlName="hourlyRentalPrice" placeholder="Enter the Rs/hr" min="1" />
+            <span class="error" *ngIf="(stepTwoForm.controls['hourlyRentalPrice'].hasError('required')) && formRef.submitted">
+              Please specify the hourly rate for the room (between 1 and 99).
+            </span>
           </div>
 
-          <div class="col-md-6 mb-2">
+        </div>
+
+        <div class="row">
+          <div class="col-md-6 mb-1">
             <label for="streetAddress" class="form-label ps-1">Street Address<span class="asterisk">*</span></label>
             <input type="text" class="form-control" id="streetAddress" formControlName="streetAddress" placeholder="Enter Street Address" />
             <span class="error" *ngIf="stepTwoForm.controls['streetAddress'].hasError('required') && formRef.submitted">Please enter street address</span>
           </div>
-        </div>
-
-        <div class="row">
-          <div class="col-md-6 mb-2">
+          <div class="col-md-6 mb-1">
             <label for="landmark" class="form-label ps-1">Landmark</label>
             <input type="text" class="form-control" id="landmark" formControlName="streetAddress" placeholder="Enter landmark " />
           </div>
-
-          <div class="col-md-6 mb-2">
-            <div class="control-group ">
-              <label for="country" class="form-label ps-1">Country<span class="asterisk">*</span></label>
-              <select id="country" formControlName="country" class="form-control" placeholder="Select country type"></select>
-            </div>
-            <span class="error" *ngIf="stepTwoForm.controls['country'].hasError('required') && formRef.submitted">Please select country</span>
-          </div>
         </div>
 
         <div class="row">
-          <div class="col-md-6 mb-2">
-            <div class="control-group ">
-              <label for="state" class="form-label ps-1">State<span class="asterisk">*</span></label>
-              <select id="state" formControlName="state" class="form-control" placeholder="Select state type"></select>
-            </div>
-            <span class="error" *ngIf="stepTwoForm.controls['state'].hasError('required') && formRef.submitted">
-              Please select state
-            </span>
-          </div>
-          <div class="col-md-6 mb-2">
-            <div class="control-group ">
-              <label for="city" class="form-label ps-1">City<span class="asterisk">*</span></label>
-              <select id="city" formControlName="city" class="form-control" placeholder="Select city type"></select>
-            </div>
-            <span class="error" *ngIf="stepTwoForm.controls['city'].hasError('required') && formRef.submitted">
-              Please select city
-            </span>
-          </div>
-        </div>
-
-        <!-- <div class="row">
           <div class="col-md-6 mb-1">
             <label for="country" class="form-label ps-1">Country<span class="asterisk">*</span></label>
-            <select class="form-select" formControlName="country" (change)="getAllState($event)">
+            <select class="form-select" formControlName="country" (change)="loadStates($event)">
               <option value="">Select Country</option>
-              <option *ngFor="let country of countries" [value]="country.country_name">{{ country.country_name }}</option>
+              <option *ngFor="let country of countries" [value]="country.countryCode">{{ country.countryName }}</option>
             </select>
             <span class="error" *ngIf="stepTwoForm.controls['country'].hasError('required') && formRef.submitted">
               Please select country
             </span>
           </div>
-
-          <div class="control-group ">
-            <label for="country" class="form-label ps-1">Country<span class="asterisk">*</span></label>
-            <select id="country" formControlName="country" class="form-control" placeholder="Select country type"></select>
+          <div class="col-md-6 mb-1">
+            <label for="state" class="form-label ps-1">State<span class="asterisk">*</span></label>
+            <select class="form-select" formControlName="state" (change)="loadCities($event)">
+              <option value="">Select state</option>
+              <option *ngFor="let state of states" [value]="state.name">{{ state.name }}</option>
+            </select>
+            <span class="error" *ngIf="stepTwoForm.controls['state'].hasError('required') && formRef.submitted">
+              Please select state
+            </span>
           </div>
-          <span class="error" *ngIf="stepTwoForm.controls['country'].hasError('required') && formRef.submitted">Please select country</span>
 
-        </div> -->
-
-        <!-- <div class="col-md-6 mb-1">
-          <label for="state" class="form-label ps-1">State<span class="asterisk">*</span></label>
-          <select class="form-select" formControlName="state" (change)="getAllCities($event)">
-            <option value="">Select State</option>
-            <option *ngFor="let state of states" [value]="state.state_name">{{ state.state_name }}</option>
-          </select>
-          <span class="error" *ngIf="stepTwoForm.controls['state'].hasError('required') && formRef.submitted">
-            Please select state
-          </span>
-        </div> -->
-
-        <!-- <div class="row">
-      <div class="col-md-6 mb-3">
-        <div class="control-group">
-          <label for="roomSize" class="form-label ps-1">Room Size<span class="asterisk">*</span></label>
-          <select id="roomSize" formControlName="roomSize" class="form-control" placeholder="Select room size"></select>
-          <span class="error" *ngIf="stepTwoForm.controls['roomSize'].hasError('required') && formRef.submitted">Please select room size</span>
         </div>
-      </div>
 
-      <div class="col-md-6 mb-2">
-        <label for="noOfRooms" class="form-label ps-1">Hourly Rental Price<span class="asterisk">*</span></label>
-        <input type="number" class="form-control" id="noOfRooms" formControlName="noOfRooms" placeholder="Enter no. of rooms" min="1" />
-        <span class="error" *ngIf="(stepTwoForm.controls['noOfRooms'].hasError('required')
-                                        || stepTwoForm.controls['noOfRooms'].hasError('min')
-                                        || stepTwoForm.controls['noOfRooms'].hasError('max')) && formRef.submitted">
-          Please specify the number of rooms (between 1 and 99)
-        </span>
-      </div>
-    </div> -->
+        <div class="row">
+          <div class="col-md-6 mb-1">
+            <label for="city" class="form-label ps-1">City<span class="asterisk">*</span></label>
+            <select class="form-select" formControlName="city">
+              <option value="">Select city</option>
+              <option *ngFor="let city of cities" [value]="city.name">{{ city.name }}</option>
+            </select>
+            <span class="error" *ngIf="stepTwoForm.controls['state'].hasError('required') && formRef.submitted">
+              Please select state
+            </span>
+          </div>
+          <div class="col-md-6 mb-1">
+            <label for="postalCode" class="form-label ps-1">Postal Code/ZIP Code<span class="asterisk">*</span></label>
+            <input type="text" class="form-control" id="postalCode" formControlName="postalCode" placeholder="Enter Postal Code/ZIP Code" />
+            <span class="error" *ngIf="(stepTwoForm.controls['postalCode'].hasError('required')
+                                    || stepTwoForm.controls['postalCode'].hasError('minlength') 
+                                    || stepTwoForm.controls['postalCode'].hasError('maxlength')
+                                    || stepTwoForm.controls['postalCode'].hasError('pattern')) && formRef.submitted">
+              Postal code must be a 6-digit number
+            </span>
+
+          </div>
+
+          <div class="col-md-12 mb-1 mt-3">
+            <input type="text" formControlName="currentLocation" class="form-control d-none" id="currentLocation">
+            <button class="btn btn-primary w-100" type="button" (click)="uploadCurrentLocation()">Please upload current location</button>
+            <span class="error" *ngIf="stepTwoForm.controls['currentLocation'].hasError('required') && formRef.submitted">
+              The room's location is required to complete this step.
+            </span>
+          </div>
 
 
+        </div>
 
-
-
-
-        <div class="buttons">
+        <div class="buttons mt-3">
           <div class="button float-start">
             <button class="button btn-types previous" cdkStepperPrevious>Previous</button>
           </div>
